--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -4,12 +4,12 @@ name: First test
 on: [push]
 
 #create Jobs - Jobs are set of Steps.
-Jobs:
+jobs:
   build: #this is basically stage
-  runs-on: ubuntu-latest #runner in which job will run
-  steps:
-   - uses: actions/checkout@v2 #this is checkut your repository in the runner
-   - run: |
+   runs-on: ubuntu-latest #runner in which job will run
+   steps:
+    - uses: actions/checkout@v2 #this is checkut your repository in the runner
+    - run: |
        echo "Hello World !!"
        git log --oneline >> output.txt
    
