--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2 #this is checkut your repository in the runner
     - run: |
        echo "Hello World !!"
-       git log --oneline >> output.txt
+       echo "This is New Push" >> log_$(date +%T).txt
    
    
 
