git pushing new

--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -9,9 +9,8 @@ jobs:
    runs-on: ubuntu-latest #runner in which job will run
    steps:
     - uses: actions/checkout@v2 #this is checkut your repository in the runner
-    - run: |
-       echo "Hello World !!"
-       echo "This is New Push" >> log_$(date +%T).txt
+    - run: echo "This is New Push" >> log_$(date +%T).txt
+       
    
    
 
