--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -12,7 +12,10 @@ jobs:
       with: 
         repository: Kathayat123/Demo-Action-Project
         path: Demo-Action-Project
-    - run: echo "This is New Push" >> log_$(date +%T).txt
+    - run: |
+         git config --global user.name 'Automatrix'
+         git config --global user.email "saurabh.singh@aptech.ac.in"
+         git log --oneline >> log_$(date +%T).txt
        
    
    
