--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -13,6 +13,9 @@ jobs:
          git config --global user.name "Checkmate"
          git config --global user.email "saurabh.singh@aptech.ac.in"
          git log --oneline >> log_$(date +%T).txt
+         git add .
+         git commit -m "log file"
+         git push
        
    
    
