--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -9,6 +9,8 @@ jobs:
    runs-on: ubuntu-latest #runner in which job will run
    steps:
     - uses: actions/checkout@v2 #this is checkut your repository in the runner
+      with:
+        repository: origin/master
     - run: |
          git config --global user.name "Checkmate"
          git config --global user.email "saurabh.singh@aptech.ac.in"
