--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -5,6 +5,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          git log --oneline >> kathayat.txt
           date >> generated.txt
           git config user.name github-actions
           git config user.email github-actions@github.com
