--- a/.github/workflows/learn-git-action.yml
+++ b/.github/workflows/learn-git-action.yml
@@ -5,10 +5,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          git log --oneline >> kathayat.txt
+          git log >> kathayat.txt
           date >> generated.txt
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name "Checkmate"
+          git config user.email "saurabh.singh@aptech.ac.in"
           git add .
           git commit -m "generated"
           git push
